added api PaymentApi

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,27 @@
+#spring:
+#  application:
+#    name: Mbank
+#
+#  datasource:
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/mbank
+#    username: postgres
+#    password: postgres
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    show-sql: true
+#
+#server:
+#  error:
+#    include-stacktrace: always
+#  port: 8888
+#
+#app:
+#  jwt:
+#    secret: Employees
+#
 spring:
   application:
     name: Mbank
@@ -16,8 +40,9 @@ spring:
 server:
   error:
     include-stacktrace: always
-  port: 8888
+  port: 5656
 
 app:
   jwt:
     secret: Employees
+
